refactor: User 엔티티에 role 추가, deletedAt 삭제